# rots

./: Cargo.toml  README.md  benchmark  benchmark.sh
.github/workflows/: ci.yml
examples/: generate.rs
src/: cli.rs  color.rs  config.rs  main.rs  output.rs  parse.rs
