[package]
name = "lok"
version = "0.0.9"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Calculation code information"
homepage = "https://github.com/wyhaya/lok"
repository = "https://github.com/wyhaya/lok.git"
license = "MIT"
readme = "README.md"

keywords = [
    "codes",
    "count",
    "count-lines-of-code",
    "command-line-tool"
]

[dependencies]
ace = "0.2.0"
bright = "0.4.0"
crossbeam-deque = "0.7.3"
glob = "0.3.0"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rand = "0.7.3"
walkdir = "2.3.1"
