[package]
name = "lok"
version = "0.1.4"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Count the number of codes"
homepage = "https://github.com/wyhaya/lok"
repository = "https://github.com/wyhaya/lok.git"
license = "MIT"
readme = "README.md"

keywords = [
    "codes",
    "count",
    "count-lines-of-code",
    "command-line-tool"
]

[profile.release]
lto = true
codegen-units = 1
# strip = "symbols"

[dependencies]
bright = "0.4.0"
clap = "2.33.3"
crossbeam-deque = "0.8.0"
glob = "0.3.0"
num_cpus = "1.13.0"
walkdir = "2.3.1"